# na-analytics

./: README.md  SKILL.md  na-analytics  na-analytics.ps1  pyproject.toml
scripts/: install.sh
src/na_analytics/: basis.py  breakeven.py  cli.py  crush.py  data.py  futures.py  fx.py  output.py  ppe.py  profitability.py  seasonal.py  spread.py  validate.py
