[project]
name = "na-analytics"
version = "1.0.0"
description = "Agricultural commodity analytics CLI for Brazilian markets"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
]

[project.scripts]
na-analytics = "na_analytics.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/na_analytics"]
